--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -27,11 +27,11 @@ You should be aware of the following known problems and limitations that might i
 |Bug ID	|Title	|Description
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1385189[1385189^]
 |Solaris 11.4 FC driver binding changes required in HUK 6.2	|Solaris 11.4 and HUK recommendations:
-FC driver binding is changed from `ssd(4D)` to `sd(4D)`. Move configuration that you have in `ssd.conf` to `sd.conf` as mentioned in Oracle (Doc ID 2595926.1). The behavior varies across newly installed Solaris 11.4 system and upgraded from 11.3 or lower versions.
+FC driver binding is changed from `ssd(4D)` to `sd(4D)`. Move configuration that you have in `ssd.conf` to `sd.conf` as mentioned in Oracle (Doc ID 2595926.1). The behavior varies across newly installed Solaris 11.4 systems and systems upgraded from 11.3 or lower versions.
 |===
 
 link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible. Some keyword combinations and bug types that you might want to use include the following:
 
-*	FCP General: Displays FC and HBA bugs that are not associated with a specific host
+*	FCP General: Displays FC and host bus adapter (HBA) bugs that are not associated with a specific host.
 *	FCP - Solaris
 
