--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -33,5 +33,5 @@ FC driver binding is changed from `ssd(4D)` to `sd(4D)`. Move configuration that
 link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible. Some keyword combinations and bug types that you might want to use include the following:
 
 *	FCP General: Displays FC and host bus adapter (HBA) bugs that are not associated with a specific host.
-*	FCP - Solaris
+*	FCP Solaris
 
