--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 :imagesdir: ./media/
 
 [.lead]
-The AIX Host Utilities enable you to connect an AIX host to NetApp storage.  
+The AIX Unified Host Utilities assists you to manage NetApp ONTAP storage attached to an AIX host.
 
 The following protocols are supported:
 
@@ -38,8 +38,7 @@ You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B6
 
 * Dynamic tracking must be enabled for all FC and FCoE initiators.
 
-.About this task
-
+[NOTE]
 The NetApp AIX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^] in a compressed tar.gz file. You must install the AIX Host Utilities kit while using AIX MPIO with NetApp ONTAP Storage.
 
 .Steps
