--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -17,7 +17,7 @@ summary: Release Notes for HPUX Host Utilities 6.0
 [lead]
 The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific HP-UX host with your ONTAP storage system.
 
-The HP-UX Host Utilities 6.0 continues to support versions of the following:
+The HP-UX Host Utilities 6.0 continues to support the following versions:
 
 * HP-UX 11iv2
 * HP-UX 11iv3
