--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 :imagesdir: ./media/
 :source-highlighter: highlighter.js
 
-== Supportability
+[.lead]
 
 NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.4 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target has been documented here.
 
