--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 ---
 
-= NVMe-oF Host Configuration for RHEL 8.6 with ONTAP
+= NVMe-oF host configuration for RHEL 8.6 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,8 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 :imagesdir: ./media/
 :source-highlighter: highlighter.js
 
-== Supportability
-
+[.lead]
 NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.6 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.6 and ONTAP as the target has been documented here.
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
