--- a/nvme_rhel_92.adoc
+++ b/nvme_rhel_92.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 ---
 
-= NVMe-oF Host Configuration for RHEL 9.2 with ONTAP
+= NVMe-oF host configuration for RHEL 9.2 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
