--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -18,7 +18,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 [.lead]
 NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.6 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. The details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.6 and ONTAP as the target has been documented here.
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
 == Features
 
@@ -30,12 +30,6 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 * For RHEL 8.6, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually.
 
 * NVMe/TCP on RHEL 8.6 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.6_release_notes/index#technology-preview_file-systems-and-storage[RHEL 8.6 Release Notes^] for details.
-
-
-== Configuration requirements
-
-Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for accurate details regarding supported configurations.
-
 
 == Enable in-kernel NVMe Multipath
 
@@ -219,15 +213,10 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.200-k
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* *No auto-connect during host bootup* NVMe/TCP cannot automatically connect during host bootup as well.
-
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts.  You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
+include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 
 .Steps
+
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
 ----
