--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -16,10 +16,9 @@ summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 :source-highlighter: highlighter.js
 
 [.lead]
-
 NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with RHEL 8.7 with ANA (Asymmetric Namespace Access). ANA is the ALUA equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. This topic includes the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.7 and ONTAP as the target.
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
 == Features
 
@@ -30,11 +29,6 @@ RHEL 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addi
 * For RHEL 8.7, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. 
 
 * NVMe/TCP on RHEL 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[RHEL 8.7 release notes^] for details. 
-
-
-== Configuration requirements
-
-Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for accurate details regarding supported configurations.
 
 
 == Enable in-kernel NVMe Multipath
@@ -226,13 +220,7 @@ QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* *No auto-reconnect after paths get reinstated* NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* *No auto-connect during host bootup* NVMe/TCP cannot automatically connect during host bootup as well.
-
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts.  You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
+include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 
 .Steps
 
