--- a/nvme_sles15_sp5.adoc
+++ b/nvme_sles15_sp5.adoc
@@ -33,7 +33,7 @@ SLES 15 SP5 has in-kernel NVMe multipath enabled for NVMe namespaces by default.
 
 == Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
  
 == Validate software versions
 
