--- a/nvme_ol_88.adoc
+++ b/nvme_ol_88.adoc
@@ -520,3 +520,5 @@ The NVMe-oF host configuration for OL 8.8 with ONTAP release has the following k
 |https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
 |===
 
+
+// JIRA-1289 20-Sep-2023
