--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -177,3 +177,7 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 ==	LPFC Verbose Logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+
+
+
+// JIRA-1289 20-Sep-2023
