--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -199,3 +199,6 @@ include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part2.adoc[]
 == LPFC Verbose Logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+
+
+// JIRA-1289 20-Sep-2023
