--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -381,3 +381,5 @@ The NVMe-oF host configuration for RHEL 8.6 with ONTAP has the following known i
 
 
 // 2022,08-03, Jira IEOPS-690
+
+// JIRA-1289 20-Sep-2023
