--- a/nvme_rhel_88.adoc
+++ b/nvme_rhel_88.adoc
@@ -480,3 +480,5 @@ The NVMe-oF host configuration for RHEL 8.8 with ONTAP release has the following
 
 
 // 2022,12-06, Jira IEOPS-690
+
+// JIRA-1289 20-Sep-2023
