--- a/nvme_ol_77.adoc
+++ b/nvme_ol_77.adoc
@@ -221,3 +221,6 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 ==	LPFC verbose logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+
+
+// JIRA-1289 20-Sep-2023
