--- a/nvme_ol_81.adoc
+++ b/nvme_ol_81.adoc
@@ -212,3 +212,6 @@ Device   Vserver  Namespace Path             NSID   UUID   Size
 == Enable 1MB I/O size for Broadcom NVMe/FC
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
+
+
+// JIRA-1289 20-Sep-2023
