--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -516,3 +516,5 @@ The NVMe-oF host configuration for OL 8.7 with ONTAP release has the following k
 
 
 // BURT-1579925 22-Aug-2023
+
+// JIRA-1289 20-Sep-2023
