--- a/nvme_ol_91.adoc
+++ b/nvme_ol_91.adoc
@@ -491,3 +491,5 @@ The NVMe-oF host configuration for OL 9.1 with ONTAP release has the following k
 |link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18196[18196^]
 |===
 
+
+// JIRA-1289 20-Sep-2023
