--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -114,3 +114,7 @@ include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
 == LPFC Verbose Logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+
+
+
+// JIRA-1289 20-Sep-2023
