--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -455,3 +455,5 @@ The NVMe-oF host configuration for RHEL 8.7 with ONTAP has the following known i
 
 
 // 2022,12-06, Jira IEOPS-690
+
+// JIRA-1289 20-Sep-2023
